# mindsight-people-control-api

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi-test.yml  publish-to-pypi.yml  pylint.yml  python-package.yml  release.yml
mindsight_people_control_api/: __init__.py  settings.py
mindsight_people_control_api/helpers/: base_requests.py  exceptions.py  models.py
mindsight_people_control_api/scripts/: __init__.py  area_records.py  areas.py  branch_corporations.py  corporations.py  employee_areas.py  employee_managers.py  employee_positions.py  employee_records.py  employees.py  parent_areas.py  position_records.py  positions.py  users.py
mindsight_people_control_api/utils/: aux_functions.py
tests/: test_branch_corporations.py  test_corporations.py
