[tool.poetry]
name = "mindsight-people-control-api"
version = "0.1.3"
description = "Mindsight People Control API to create, update and delete records"
authors = ["Diogo56 <diogo.amorim2001@gmail.com>"]
readme = "README.md"
packages = [{include = "mindsight_people_control_api"}]

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.8"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
repository = "https://pypi.org/project/mindsight-people-control-api/"
