[tool.poetry]
name = "mindsight-people-control-api"
version = "0.1.18"
description = "Mindsight People Control API to create, update and delete records"
authors = ["stone_people_analytics <systems-techpeople@stone.com.br>"]
maintainers = [
    "diogo56 <diogo.amorim2001@gmail.com>",
    "guilherme_lsilva <manager.guilherme.silva@gmail.com>",
    "root-who <joaopaulo_gonzaga@outlook.com>",
]
readme = "README.md"
packages = [{include = "mindsight_people_control_api"}]
license = "MIT"
repository = "https://github.com/people-analytics-tech/mindsight-people-control-api"

[tool.poetry.dependencies]
python = "^3.9"
python-decouple = "^3.8"
requests = "^2.31.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
